--- a/src/app/landingpage/video-site/profile-details/profile-details.component.scss
+++ b/src/app/landingpage/video-site/profile-details/profile-details.component.scss
@@ -1,333 +1,337 @@
-@import './../../../../styles.scss';
+@import "./../../../../styles.scss";
 
-section{
-    width: 100vw;
-    height: 100dvh;
-    background-color: #060606;
-    color: whitesmoke;
+section {
+  width: 100vw;
+  height: 100dvh;
+  background-color: #060606;
+  color: whitesmoke;
+  @include dFlex($j: space-between);
+  flex-direction: column;
+  header {
+    width: calc(100% - 2rem);
     @include dFlex($j: space-between);
-    flex-direction: column;
-    header{
-        width: calc(100% - 2rem);
-        @include dFlex($j: space-between);
-        padding: 1rem;
-        img{
-            cursor: pointer;
-            margin-left: 5rem;
-        }
+    padding: 1rem;
+    img {
+      cursor: pointer;
+      margin-left: 5rem;
     }
+  }
 }
 
+.mainBtn {
+  margin: 1rem;
+  color: whitesmoke;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  font-size: x-large;
+  transition: 0.3s ease-in-out;
+  &:hover {
+    color: #6e67d1;
+    text-shadow: 0px 0px 20px white;
+    filter: dropshadow(color=#ffffff, offx=2, offy=2);
+  }
+}
 
-.mainBtn{
-    margin: 1rem;
+form {
+  @include dFlex($g: 2rem);
+  flex-direction: column;
+  text-align: center;
+  margin: 1rem;
+  .formHeaderDiv {
+    h1 {
+      margin: auto;
+      font-size: 3.5rem;
+      font-weight: 500;
+      animation: lights 5s 750ms linear infinite;
+    }
+    span {
+      font-size: x-large;
+    }
+  }
+  input {
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid whitesmoke;
+    color: whitesmoke;
+    font-size: large;
+    width: 100%;
+    outline: none;
+  }
+}
+
+.lineBox {
+  width: 100%;
+  @include dFlex($a: flex-start);
+  flex-direction: column;
+  text-align: start;
+  font-size: x-large;
+
+  .headerDiv {
+    width: 100%;
+    @include dFlex($j: space-between, $g: 32px);
+    .profileDetailsTitle {
+      border-bottom: 2px solid grey;
+    }
+    .invalidFeedback {
+      @include dFlex();
+      font-size: small;
+      color: red;
+    }
+  }
+  .profileDetails {
+    width: 100%;
+    @include dFlex($j: space-between, $g: 3rem);
+    font-size: large;
+    margin-bottom: 1rem;
+  }
+  .editBtn {
+    margin: none;
     color: whitesmoke;
     background-color: transparent;
     border: none;
     cursor: pointer;
-    font-size: x-large;
-    transition: 0.3s ease-in-out;
-    &:hover{
-        color: #6e67d1;
-        text-shadow: 0px 0px 20px white;
-        filter: dropshadow(color=#ffffff, offx=2, offy=2);
-    }
-}
-
-
-form{
-    @include dFlex($g: 2rem);
-    flex-direction: column;
-    text-align: center;
-    margin: 1rem;
-    .formHeaderDiv{
-        h1{
-            margin: auto;
-            font-size: 3.5rem;
-            font-weight: 500;
-            animation: lights 5s 750ms linear infinite
-        }
-        span{
-            font-size: x-large;
-        }
-    }
-    input{
-        background-color: transparent;
-        border: none;
-        border-bottom: 1px solid whitesmoke;
-        color: whitesmoke;
-        font-size: large;  
-        width: 100%;
-        outline: none;
-    }
-}
-
-.lineBox{
-    width: 100%;
-    @include dFlex($a: flex-start);
-    flex-direction: column;
-    text-align: start;
-    font-size: x-large;
-
-    .headerDiv{
-        width: 100%;
-        @include dFlex($j: space-between, $g: 32px);
-        .profileDetailsTitle{
-            border-bottom: 2px solid grey;
-        }
-        .invalidFeedback{
-            @include dFlex();
-            font-size: small;
-            color: red;
-        }
-    }
-    .profileDetails{
-        width: 100%;
-        @include dFlex($j: space-between, $g: 3rem);
-        font-size: large;
-        margin-bottom: 1rem;
-    }
-    .editBtn{
-        margin: none;
-        color: whitesmoke;
-        background-color: transparent;
-        border: none;
-        cursor: pointer;
-        font-size: large;
-        transition: 0.3s ease-in-out;
-        &:hover{
-            color: #6e67d1;
-        }
-    }
-}
-
-
-.saveBlueBtn{
-    color: whitesmoke;
-    background-color: $btnColor;
-    padding: 22px;
-    padding-top: 12px;
-    padding-bottom: 12px;
-    border: none;
-    border-radius: 34px;
-    font-size: xx-large;
-    cursor: pointer;
-    transition: ease-in-out 0.3s;
-    z-index: 2;
-    &:hover {
-        background-color: white;
-        color: $btnColor;
-        img {
-            filter: invert(42%) sepia(100%) saturate(4000%) hue-rotate(220deg) brightness(95%) contrast(90%);
-        }
-    }
-}
-
-.saveBlueBtnDisabled{
-    color: whitesmoke;
-    background-color: #7782eb;
-    padding: 22px;
-    padding-top: 12px;
-    padding-bottom: 12px;
-    border: none;
-    border-radius: 34px;
-    font-size: xx-large;
-}
-
-.invalidFeedbackBottom{
-    margin-bottom: -1.8rem;
-    color: darkorange;
-}
-
-.loaderContainer{
-    width: 480px;
-    @include dFlex($g: 1rem);
-    flex-direction: column;
-    text-align: center;
-    .loader2 {
-        display: inline-flex;
-        gap: 10px;
-    }
-    .loader2:before,
-    .loader2:after {
-        content: "";
-        height: 20px;
-        aspect-ratio: 1;
-        border-radius: 50%;
-        background:
-          radial-gradient(farthest-side,#000 95%,#0000) 35% 35%/6px 6px no-repeat
-          #fff;
-        animation: l5 3s infinite;
-    }
-
-    .loader {
-        width: 80%;
-        height: 20px;
-        background: 
-          linear-gradient(90deg, #0000 , #443AFF) left -50px top 0/50px 20px no-repeat 
-          #8307FF;
-        animation: l2 2s infinite linear;
-        border-radius: 20px;
-    }
-}
-
-
-.blueBtnTopRight{
-    @include dFlex($g: 8px);
-    color: whitesmoke;
-    background-color: $btnColor;
-    padding: 16px;
-    padding-top: 8px;
-    padding-bottom: 8px;
-    border: none;
-    border-radius: 26px;
     font-size: large;
-    cursor: pointer;
-    transition: ease-in-out 0.3s;
-    z-index: 2;
-    margin-right: 5rem;
+    transition: 0.3s ease-in-out;
     &:hover {
-        background-color: white;
-        color: $btnColor;
-        img {
-            filter: invert(42%) sepia(100%) saturate(4000%) hue-rotate(220deg) brightness(95%) contrast(90%);
-        }
+      color: #6e67d1;
     }
+  }
+}
+
+.saveBlueBtn {
+  color: whitesmoke;
+  background-color: $btnColor;
+  padding: 22px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  border: none;
+  border-radius: 34px;
+  font-size: xx-large;
+  cursor: pointer;
+  transition: ease-in-out 0.3s;
+  z-index: 2;
+  &:hover {
+    background-color: white;
+    color: $btnColor;
+    img {
+      filter: invert(42%) sepia(100%) saturate(4000%) hue-rotate(220deg)
+        brightness(95%) contrast(90%);
+    }
+  }
+}
+
+.saveBlueBtnDisabled {
+  color: whitesmoke;
+  background-color: #7782eb;
+  padding: 22px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  border: none;
+  border-radius: 34px;
+  font-size: xx-large;
+}
+
+.invalidFeedbackBottom {
+  margin-bottom: -1.8rem;
+  color: darkorange;
+}
+
+.loaderContainer {
+  width: 480px;
+  @include dFlex($g: 1rem);
+  flex-direction: column;
+  text-align: center;
+  .loader2 {
+    display: inline-flex;
+    gap: 10px;
+  }
+  .loader2:before,
+  .loader2:after {
+    content: "";
+    height: 20px;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    background: radial-gradient(farthest-side, #000 95%, #0000) 35% 35%/6px 6px
+      no-repeat #fff;
+    animation: l5 3s infinite;
+  }
+
+  .loader {
+    width: 80%;
+    height: 20px;
+    background: linear-gradient(90deg, #0000, #443aff) left -50px top 0/50px 20px
+      no-repeat #8307ff;
+    animation: l2 2s infinite linear;
+    border-radius: 20px;
+  }
+}
+
+.blueBtnTopRight {
+  @include dFlex($g: 8px);
+  color: whitesmoke;
+  background-color: $btnColor;
+  padding: 16px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  border: none;
+  border-radius: 26px;
+  font-size: large;
+  cursor: pointer;
+  transition: ease-in-out 0.3s;
+  z-index: 2;
+  margin-right: 5rem;
+  &:hover {
+    background-color: white;
+    color: $btnColor;
+    img {
+      filter: invert(42%) sepia(100%) saturate(4000%) hue-rotate(220deg)
+        brightness(95%) contrast(90%);
+    }
+  }
 }
 
 //------------------ animation ---------------------
 @keyframes lights {
-    0% {
-      color: hsl(230, 40%, 80%);
-      text-shadow:
-        0 0 1em hsla(320, 100%, 50%, 0.2),
-        0 0 0.125em hsla(320, 100%, 60%, 0.3),
-        -1em -0.125em 0.5em hsla(40, 100%, 60%, 0),
-        1em 0.125em 0.5em hsla(200, 100%, 60%, 0);
-    }
-    
-    30% { 
-      color: hsl(230, 80%, 90%);
-      text-shadow:
-        0 0 1em hsla(320, 100%, 50%, 0.5),
-        0 0 0.125em hsla(320, 100%, 60%, 0.5),
-        -0.5em -0.125em 0.25em hsla(40, 100%, 60%, 0.2),
-        0.5em 0.125em 0.25em hsla(200, 100%, 60%, 0.4);
-    }
-    
-    40% { 
-      color: hsl(230, 100%, 95%);
-      text-shadow:
-        0 0 1em hsla(320, 100%, 50%, 0.5),
-        0 0 0.125em hsla(320, 100%, 90%, 0.5),
-        -0.25em -0.125em 0.125em hsla(40, 100%, 60%, 0.2),
-        0.25em 0.125em 0.125em hsla(200, 100%, 60%, 0.4);
-    }
-    
-    70% {
-      color: hsl(230, 80%, 90%);
-      text-shadow:
-        0 0 1em hsla(320, 100%, 50%, 0.5),
-        0 0 0.125em hsla(320, 100%, 60%, 0.5),
-        0.5em -0.125em 0.25em hsla(40, 100%, 60%, 0.2),
-        -0.5em 0.125em 0.25em hsla(200, 100%, 60%, 0.4);
-    }
-    
-    100% {
-      color: hsl(230, 40%, 80%);
-      text-shadow:
-        0 0 1em hsla(320, 100%, 50%, 0.2),
-        0 0 0.125em hsla(320, 100%, 60%, 0.3),
-        1em -0.125em 0.5em hsla(40, 100%, 60%, 0),
-        -1em 0.125em 0.5em hsla(200, 100%, 60%, 0);
-    }  
-}
+  0% {
+    color: hsl(230, 40%, 80%);
+    text-shadow: 0 0 1em hsla(320, 100%, 50%, 0.2),
+      0 0 0.125em hsla(320, 100%, 60%, 0.3),
+      -1em -0.125em 0.5em hsla(40, 100%, 60%, 0),
+      1em 0.125em 0.5em hsla(200, 100%, 60%, 0);
+  }
 
+  30% {
+    color: hsl(230, 80%, 90%);
+    text-shadow: 0 0 1em hsla(320, 100%, 50%, 0.5),
+      0 0 0.125em hsla(320, 100%, 60%, 0.5),
+      -0.5em -0.125em 0.25em hsla(40, 100%, 60%, 0.2),
+      0.5em 0.125em 0.25em hsla(200, 100%, 60%, 0.4);
+  }
+
+  40% {
+    color: hsl(230, 100%, 95%);
+    text-shadow: 0 0 1em hsla(320, 100%, 50%, 0.5),
+      0 0 0.125em hsla(320, 100%, 90%, 0.5),
+      -0.25em -0.125em 0.125em hsla(40, 100%, 60%, 0.2),
+      0.25em 0.125em 0.125em hsla(200, 100%, 60%, 0.4);
+  }
+
+  70% {
+    color: hsl(230, 80%, 90%);
+    text-shadow: 0 0 1em hsla(320, 100%, 50%, 0.5),
+      0 0 0.125em hsla(320, 100%, 60%, 0.5),
+      0.5em -0.125em 0.25em hsla(40, 100%, 60%, 0.2),
+      -0.5em 0.125em 0.25em hsla(200, 100%, 60%, 0.4);
+  }
+
+  100% {
+    color: hsl(230, 40%, 80%);
+    text-shadow: 0 0 1em hsla(320, 100%, 50%, 0.2),
+      0 0 0.125em hsla(320, 100%, 60%, 0.3),
+      1em -0.125em 0.5em hsla(40, 100%, 60%, 0),
+      -1em 0.125em 0.5em hsla(200, 100%, 60%, 0);
+  }
+}
 
 @keyframes l5 {
-    0%,11%   {background-position:35% 35%}
-    14%,36%  {background-position:65% 35%}
-    38%,61%  {background-position:65% 65%}
-    64%,86%  {background-position:35% 65%}
-    88%,100% {background-position:35% 35%}
+  0%,
+  11% {
+    background-position: 35% 35%;
+  }
+  14%,
+  36% {
+    background-position: 65% 35%;
+  }
+  38%,
+  61% {
+    background-position: 65% 65%;
+  }
+  64%,
+  86% {
+    background-position: 35% 65%;
+  }
+  88%,
+  100% {
+    background-position: 35% 35%;
+  }
 }
 
-
 @keyframes l2 {
-    100% {background-position: right -50px top 0}
+  100% {
+    background-position: right -50px top 0;
+  }
 }
 
 @media (max-width: 630px) {
-    section{
-        header{
-            img{
-                margin-left: 1rem;
-            }
-        }
+  section {
+    header {
+      img {
+        margin-left: 1rem;
+      }
     }
+  }
 
+  .blueBtnTopRight {
+    padding: 12px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    margin-right: 1rem;
+  }
 
-    .blueBtnTopRight{
-        padding: 12px;
-        padding-top: 4px;
-        padding-bottom: 4px;
-        margin-right: 1rem;
+  form {
+    @include dFlex($g: 1rem);
+    margin: 0;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    .formHeaderDiv {
+      h1 {
+        font-size: 2.5rem;
+      }
+      span {
+        font-size: medium;
+      }
     }
+  }
 
-    form{
-        @include dFlex($g: 1rem);
-        margin: 0;
-        margin-left: 2rem;
-        margin-right: 2rem;
-        .formHeaderDiv{
-            h1{
-                font-size: 2.5rem;
-            }
-            span{
-                font-size: medium;
-            }
-        }
-    }
+  .invalidFeedbackBottom {
+    margin-top: -1.2rem;
+    margin-bottom: 0;
+  }
 
-    .invalidFeedbackBottom{
-        margin-top: -1.2rem;
-        margin-bottom: 0;
+  .lineBox {
+    font-size: large;
+    .headerDiv {
+      @include dFlex($j: space-between, $g: 64px);
+      .invalidFeedback {
+        @include dFlex($a: flex-start, $g: 4px);
+        font-size: x-small;
+      }
     }
+    .profileDetails {
+      font-size: medium;
+      margin-bottom: 0.6rem;
+    }
+  }
 
-    .lineBox{
-        font-size: large;
-        .headerDiv{
-            @include dFlex($j: space-between, $g: 64px);
-            .invalidFeedback{
-                @include dFlex($a:flex-start, $g: 4px);
-                font-size: x-small;
-            }
-        }
-        .profileDetails{
-            font-size: medium;
-            margin-bottom: 0.6rem;
-        }
-    }
+  .saveBlueBtn {
+    padding: 12px;
+    padding-left: 16px;
+    padding-right: 16px;
+    font-size: x-large;
+  }
 
-    .saveBlueBtn{
-        padding: 12px;
-        padding-left: 16px;
-        padding-right: 16px;
-        font-size: x-large;
-    }
-    
-    .saveBlueBtnDisabled{
-        padding: 12px;
-        padding-left: 16px;
-        padding-right: 16px;
-        font-size: x-large;
-    }
+  .saveBlueBtnDisabled {
+    padding: 12px;
+    padding-left: 16px;
+    padding-right: 16px;
+    font-size: x-large;
+  }
 
-    .loaderContainer{
-        @include dFlex($g: 1rem);
-        h1{
-            font-size: 1.2rem;
-        }
+  .loaderContainer {
+    @include dFlex($g: 1rem);
+    h1 {
+      font-size: 1.2rem;
     }
-
+  }
 }
