--- a/src/app/landingpage/video-site/video-display/video-display.component.scss
+++ b/src/app/landingpage/video-site/video-display/video-display.component.scss
@@ -1,4 +1,3 @@
-
 .video-display-overlay {
   position: fixed;
   top: 0;
@@ -18,7 +17,7 @@
   // background: #010101; //videoplayerfarbe
   border-radius: 8px;
   max-width: 30vw;
-  min-width: 500px;// noch mit full hd abgleichen
+  min-width: 500px; // noch mit full hd abgleichen
   /* max-height: 100%; */
   text-align: center;
   display: flex;
@@ -56,7 +55,7 @@ h2 {
   opacity: 72%;
   -webkit-background-clip: text; // ????
   background-clip: text; // ????
-  color: #6F17FF;
+  color: #6f17ff;
   font-weight: 900;
 }
 .img-back {
@@ -91,14 +90,14 @@ h2 {
   max-width: 100%;
   overflow: hidden;
   overflow-wrap: break-word;
-  .description-header{
+  .description-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     span {
       font-size: 32px;
     }
-    .starIconImg{
+    .starIconImg {
       width: 32px;
       height: 32px;
       object-fit: contain;
@@ -113,7 +112,6 @@ h2 {
 }
 
 .test {
-  
   position: absolute;
   top: 253px;
   left: 0;
@@ -131,7 +129,7 @@ h2 {
 }
 
 .active {
-  display: block; 
+  display: block;
 }
 
 .starIconImg.disabled {
@@ -155,10 +153,10 @@ select {
   bottom: 35px;
   left: 120px;
   z-index: 2;
-  
+
   .dropdown-toggle {
     background-color: transparent;
-    color: #DADDDE;
+    color: #daddde;
     border: none;
     cursor: pointer;
     outline: none;
@@ -166,13 +164,13 @@ select {
     position: relative;
     z-index: 3;
   }
-  
+
   .dropdown-menu {
     position: absolute;
     bottom: 100%; /* Öffnet das Menü nach oben */
     left: 0;
     background-color: #141414; /* Dunkler Hintergrund */
-    color: #DADDDE; /* Heller Text */
+    color: #daddde; /* Heller Text */
     border: 1px solid #333;
     border-radius: 5px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
@@ -183,11 +181,11 @@ select {
     opacity: 1; /* Sicherstellen, dass es sichtbar ist */
     transition: opacity 0.3s ease; /* Sanfte Übergangsanimation */
     visibility: visible; /* Sicherstellen, dass es sichtbar ist */
-    
+
     .qualityBtn {
       cursor: pointer;
       font-size: small;
-      
+
       &:hover {
         background-color: #333;
       }
@@ -205,29 +203,29 @@ select {
   visibility: visible; /* Sichtbar machen */
 }
 
-.hideQualitySelector{
+.hideQualitySelector {
   animation: hideQualityBtn 0.4s linear forwards;
 }
 
 @keyframes hideQualityBtn {
   0% {
-      opacity: 1;
+    opacity: 1;
   }
   100% {
-      opacity: 0;
+    opacity: 0;
   }
 }
 
-.showQualitySelector{
+.showQualitySelector {
   animation: showQualityBtn 0.08s linear forwards;
 }
 
 @keyframes showQualityBtn {
   0% {
-      opacity: 0;
+    opacity: 0;
   }
   100% {
-      opacity: 1;
+    opacity: 1;
   }
 }
 
@@ -239,7 +237,7 @@ select {
   left: 20px !important;
   z-index: 1000 !important; /* Stelle sicher, dass der Button über anderen Elementen liegt */
   position: absolute;
-  opacity: 1
+  opacity: 1;
 }
 
 :fullscreen .video-display-content {
@@ -265,8 +263,6 @@ select {
 @media (max-width: 560px) {
   .video-display-content {
     max-width: 30vw;
-    min-width: 300px;// noch mit full hd abgleichen
-
+    min-width: 300px; // noch mit full hd abgleichen
   }
-
 }
