--- a/src/app/landingpage/login/register/email-exists/email-exists.component.scss
+++ b/src/app/landingpage/login/register/email-exists/email-exists.component.scss
@@ -1,71 +1,71 @@
-@import './../../../../../styles.scss';
+@import "./../../../../../styles.scss";
 
-section{
-    width: 100vw;
-    height: 100dvh;
-    @include dFlex($j: space-between);
+section {
+  width: 100vw;
+  height: 100dvh;
+  @include dFlex($j: space-between);
+  flex-direction: column;
+  background-image: url("../../../../../assets/img/background_img_woman.webp");
+  background-size: cover;
+  background-position: center;
+
+  .headerDiv {
+    @include dFlex($j: flex-start);
+    padding: 3rem;
+    width: calc(100% - 6rem);
+    img {
+      width: 20rem;
+      height: auto;
+      object-fit: contain;
+    }
+  }
+
+  .textDiv {
+    max-width: 400px;
+    color: $btnColor;
+    background-color: white;
+    padding: 2rem;
+    border-radius: 25px;
+    @include dFlex();
     flex-direction: column;
-    background-image: url('../../../../../assets/img/background_img_woman.webp');
-    background-size: cover;
-    background-position: center;
-
-    .headerDiv {
-        @include dFlex($j: flex-start);
-        padding: 3rem;
-        width: calc(100% - 6rem);
-        img {
-            width: 20rem;
-            height: auto;
-            object-fit: contain;
-        }
+    text-align: center;
+    p {
+      font-size: larger;
     }
+    .loginBtn {
+      color: white;
+      background-color: $btnColor;
+      padding: 26px;
+      padding-top: 12px;
+      padding-bottom: 12px;
+      border: none;
+      border-radius: 40px;
+      border: 1px solid $btnColor;
+      font-size: larger;
+      cursor: pointer;
+      transition: ease-in-out 0.3s;
 
-    .textDiv{
-        max-width: 400px;
+      &:hover {
+        background-color: whitesmoke;
         color: $btnColor;
-        background-color: white;
-        padding: 2rem;
-        border-radius: 25px;
-        @include dFlex();
-        flex-direction: column;
-        text-align: center;
-        p{
-            font-size: larger;
-        }
-        .loginBtn {
-            color: white;
-            background-color: $btnColor;
-            padding: 26px;
-            padding-top: 12px;
-            padding-bottom: 12px;
-            border: none;
-            border-radius: 40px;
-            border: 1px solid $btnColor;
-            font-size: larger;
-            cursor: pointer;
-            transition: ease-in-out 0.3s;
-        
-            &:hover {
-                background-color: whitesmoke;
-                color: $btnColor;
-            }
-        }
+      }
     }
+  }
 
-    footer {
-        width: 100%;
-        margin: 2rem;
-        @include dFlex($g: 80px);
-    
-        span {
-            cursor: pointer;
-            font-size: 1.2rem;
-            transition: ease-in-out 0.3s;
-            color: white;
-    
-            &:hover {
-                color: $btnColor;
-            }
-        }
+  footer {
+    width: 100%;
+    margin: 2rem;
+    @include dFlex($g: 80px);
+
+    span {
+      cursor: pointer;
+      font-size: 1.2rem;
+      transition: ease-in-out 0.3s;
+      color: white;
+
+      &:hover {
+        color: $btnColor;
+      }
     }
+  }
 }
