--- a/src/app/landingpage/login/register/register.component.scss
+++ b/src/app/landingpage/login/register/register.component.scss
@@ -1,221 +1,221 @@
-@import './../../../../styles.scss';
+@import "./../../../../styles.scss";
 
 section {
-    height: 100dvh;
-    width: 100vw;
-    @include dFlex($j: space-between);
-    flex-direction: column;
-    background-image: url('../../../../assets/img/background_img_woman.webp');
-    background-size: cover;
-    background-position: center;
+  height: 100dvh;
+  width: 100vw;
+  @include dFlex($j: space-between);
+  flex-direction: column;
+  background-image: url("../../../../assets/img/background_img_woman.webp");
+  background-size: cover;
+  background-position: center;
 }
 .loginBtn {
-    color: whitesmoke;
-    background-color: $btnColor;
-    padding: 26px;
-    padding-top: 12px;
-    padding-bottom: 12px;
-    border: none;
-    border-radius: 40px;
-    font-size: larger;
-    cursor: pointer;
-    transition: ease-in-out 0.3s;
-    &:hover {
-        background-color: whitesmoke;
-        color: $btnColor;
-    }
+  color: whitesmoke;
+  background-color: $btnColor;
+  padding: 26px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  border: none;
+  border-radius: 40px;
+  font-size: larger;
+  cursor: pointer;
+  transition: ease-in-out 0.3s;
+  &:hover {
+    background-color: whitesmoke;
+    color: $btnColor;
+  }
 }
 
 .contentDiv {
-    @include dFlex($j: space-between);
+  @include dFlex($j: space-between);
+  flex-direction: column;
+  background-color: white;
+  border-radius: 25px;
+  padding: 2rem;
+  min-width: 400px;
+  h1 {
+    font-size: 3.5em;
+    margin: 0;
+    margin-bottom: 0.5rem;
+    color: $btnColor;
+  }
+  .positionInputs {
+    @include dFlex($a: start, $g: 8px);
     flex-direction: column;
-    background-color: white;
-    border-radius: 25px;
-    padding: 2rem;
-    min-width: 400px;
-    h1 {
-        font-size: 3.5em;
-        margin: 0;
-        margin-bottom: 0.5rem;
-        color: $btnColor;
+    width: 100%;
+    .normalInput {
+      padding: 12px;
+      padding-left: 16px;
+      padding-right: 16px;
+      border: 1px solid $btnColor;
+      border-radius: 30px;
+      outline: none;
+      font-size: larger;
+      width: calc(100% - 2rem);
+      color: $btnColor;
     }
-    .positionInputs{
-        @include dFlex($a: start, $g: 8px);
-        flex-direction: column;
-        width: 100%;
-        .normalInput {
-            padding: 12px;
-            padding-left: 16px;
-            padding-right: 16px;
-            border: 1px solid $btnColor;
-            border-radius: 30px;
-            outline: none;
-            font-size: larger;
-            width: calc(100% - 2rem);
-            color: $btnColor;
-        }
-    }
+  }
 }
 
 .submitBtn {
-    margin-top: 1.2rem;
-    color: whitesmoke;
-    background-color: $btnColor;
-    padding: 26px;
-    padding-top: 12px;
-    padding-bottom: 12px;
-    border: none;
-    border-radius: 40px;
-    font-size: larger;
-    border: 1px solid $btnColor;
-    cursor: pointer;
-    transition: ease-in-out 0.3s;
+  margin-top: 1.2rem;
+  color: whitesmoke;
+  background-color: $btnColor;
+  padding: 26px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  border: none;
+  border-radius: 40px;
+  font-size: larger;
+  border: 1px solid $btnColor;
+  cursor: pointer;
+  transition: ease-in-out 0.3s;
 
-    &:hover {
-        background-color: #0919ce;
-        color: white;
-    }
+  &:hover {
+    background-color: #0919ce;
+    color: white;
+  }
 }
 
 .submitBtnDisabled {
-    margin-top: 1.2rem;
-    color: $btnColor;
-    background-color: white;
-    padding: 26px;
-    padding-top: 12px;
-    padding-bottom: 12px;
-    border: none;
-    border-radius: 40px;
-    font-size: larger;
-    border: 1px solid $btnColor;
-    transition: ease-in-out 0.3s;
+  margin-top: 1.2rem;
+  color: $btnColor;
+  background-color: white;
+  padding: 26px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  border: none;
+  border-radius: 40px;
+  font-size: larger;
+  border: 1px solid $btnColor;
+  transition: ease-in-out 0.3s;
 }
 
-.invalidFeedback{
-    width: 100%;
-    @include dFlex($j: flex-start, $g: 8px);
-    color: red;
-    span{
-        @include dFlex();
-        img{
-            margin-left: 16px;
-            margin-right: 8px;
-        }
+.invalidFeedback {
+  width: 100%;
+  @include dFlex($j: flex-start, $g: 8px);
+  color: red;
+  span {
+    @include dFlex();
+    img {
+      margin-left: 16px;
+      margin-right: 8px;
     }
+  }
 }
 
-.warSpan{
-    width: 100%;
-    @include dFlex($j: flex-start, $g: 8px);
-    color: red;
-    img{
-        margin-left: 16px;
-    }
+.warSpan {
+  width: 100%;
+  @include dFlex($j: flex-start, $g: 8px);
+  color: red;
+  img {
+    margin-left: 16px;
+  }
 }
 
 ::placeholder {
-    color: $btnColor;
-    opacity: 1;
-    /* Firefox */
+  color: $btnColor;
+  opacity: 1;
+  /* Firefox */
 }
 
 ::-ms-input-placeholder {
-    /* Edge 12-18 */
-    color: $btnColor;
+  /* Edge 12-18 */
+  color: $btnColor;
 }
 
 .passwortImg {
-    width: 100%;
-    @include dFlex($j: flex-start);
-    .passwordInput {
-        padding: 12px;
-        padding-left: 16px;
-        padding-right: 48px;
-        border: 1px solid $btnColor;
-        border-radius: 30px;
-        outline: none;
-        font-size: larger;
-        width: calc(100% - 4rem);
-        color: $btnColor;
-    }
+  width: 100%;
+  @include dFlex($j: flex-start);
+  .passwordInput {
+    padding: 12px;
+    padding-left: 16px;
+    padding-right: 48px;
+    border: 1px solid $btnColor;
+    border-radius: 30px;
+    outline: none;
+    font-size: larger;
+    width: calc(100% - 4rem);
+    color: $btnColor;
+  }
 
-    img {
-        margin-left: -40px;
-        cursor: pointer;
-    }
+  img {
+    margin-left: -40px;
+    cursor: pointer;
+  }
 }
 
 @media (max-width: 630px) {
-    .contentDiv {
-        padding: 1rem;
-        min-width: 254px;
-        h1 {
-            font-size: 2.5em;
-        }
-        .positionInputs{
-            @include dFlex($a: start, $g: 12px);
-            flex-direction: column;
-            width: 100%;
-            .normalInput {
-                padding: 8px;
-                padding-left: 16px;
-                padding-right: 16px;
-                font-size: medium;
-            }
-        }
+  .contentDiv {
+    padding: 1rem;
+    min-width: 254px;
+    h1 {
+      font-size: 2.5em;
     }
-
-    .warSpan{
-        font-size: small;
-        gap: 4px;
-        img{
-            margin: 0;
-            width: 12px;
-            height: 12px;
-        }
-    }
-
-    .invalidFeedback{
-        font-size: small;
-        span{
-            img{
-                margin: 0;
-                width: 12px;
-                height: 12px;
-                margin-right: 4px;
-            }
-        }
-    }
-
-    .passwortImg {
-        .passwordInput {
-            padding: 8px;
-            padding-right: 40px;
-            width: calc(100% - 3rem);
-            font-size: medium;
-        }
-    
-        img {
-            margin-left: -32px;
-            cursor: pointer;
-            width: 18px;
-            height: 18px;
-        }
-    }
-
-    .submitBtn {
-        padding: 0;
-        padding-top: 8px;
-        padding-bottom: 8px;
+    .positionInputs {
+      @include dFlex($a: start, $g: 12px);
+      flex-direction: column;
+      width: 100%;
+      .normalInput {
+        padding: 8px;
+        padding-left: 16px;
+        padding-right: 16px;
         font-size: medium;
-        width: 108px;
+      }
     }
-    
-    .submitBtnDisabled {
-        padding: 0;
-        padding-top: 8px;
-        padding-bottom: 8px;
-        font-size: medium;
-        width: 108px;
+  }
+
+  .warSpan {
+    font-size: small;
+    gap: 4px;
+    img {
+      margin: 0;
+      width: 12px;
+      height: 12px;
     }
+  }
+
+  .invalidFeedback {
+    font-size: small;
+    span {
+      img {
+        margin: 0;
+        width: 12px;
+        height: 12px;
+        margin-right: 4px;
+      }
+    }
+  }
+
+  .passwortImg {
+    .passwordInput {
+      padding: 8px;
+      padding-right: 40px;
+      width: calc(100% - 3rem);
+      font-size: medium;
+    }
+
+    img {
+      margin-left: -32px;
+      cursor: pointer;
+      width: 18px;
+      height: 18px;
+    }
+  }
+
+  .submitBtn {
+    padding: 0;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    font-size: medium;
+    width: 108px;
+  }
+
+  .submitBtnDisabled {
+    padding: 0;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    font-size: medium;
+    width: 108px;
+  }
 }
