--- a/src/app/shared/login/footer/footer.component.scss
+++ b/src/app/shared/login/footer/footer.component.scss
@@ -1,26 +1,23 @@
-@import './../../../../styles.scss';
+@import "./../../../../styles.scss";
 
 .footer {
-    // width: 100%;
-    width: 100vw;
-    // margin: 2rem;
-    margin-bottom: 2rem;
-    @include dFlex($g: 80px);
+  width: 100vw;
+  margin-bottom: 2rem;
+  @include dFlex($g: 80px);
 
-    span {
-        cursor: pointer;
-        font-size: 1.2rem;
-        transition: ease-in-out 0.3s;
-        color: white;
+  span {
+    cursor: pointer;
+    font-size: 1.2rem;
+    transition: ease-in-out 0.3s;
+    color: white;
 
-        &:hover {
-            color: $btnColor;
-        }
-    }
-}
-@media (max-width: 500px) {
-   
-    .footer {
-        margin-bottom: 1rem;
+    &:hover {
+      color: $btnColor;
     }
   }
+}
+@media (max-width: 500px) {
+  .footer {
+    margin-bottom: 1rem;
+  }
+}
