--- a/src/app/shared/videoSite/header/header.component.scss
+++ b/src/app/shared/videoSite/header/header.component.scss
@@ -285,19 +285,16 @@ header {
     display: flex;
     z-index: 55;
     position: absolute;
-    top: 1%; // bunding mit left logo
-    // left: calc(50% - 38px); mitte version
-    right: 6rem; // right version
+    top: 1%;
+    right: 6rem; 
     width: 78px;
     height: 78px;
     cursor: pointer;
-    //  filter: sepia(1) saturate(1000%) hue-rotate(218deg) brightness(85%);
     filter: hue-rotate(338deg) brightness(82%) contrast(85%);
   }
   .mobileSection {
     position: absolute;
     top: 86%;
-    // left: calc(50% - 144px); mittige version
     right: 50px;
     width: 144px;
     height: auto;
