--- a/src/app/landingpage/video-site/video-display/video-display.component.scss
+++ b/src/app/landingpage/video-site/video-display/video-display.component.scss
@@ -1,3 +1,5 @@
+@import "./../../../../styles.scss";
+
 .video-display-overlay {
   position: fixed;
   top: 0;
@@ -52,9 +54,8 @@ h2 {
 
 .presents-text {
   position: absolute;
-  top: 25px;
+  top: 15px;
   left: 39px;
-  opacity: 72%;
   -webkit-background-clip: text; // ????
   background-clip: text; // ????
   color: #6f17ff;
@@ -291,9 +292,34 @@ select {
   animation: showQualityBtn 0.08s linear forwards !important;
 }
 
+@media (min-width: $screanWidthQHD) {
+
+  .video-img-container {
+    img {
+      height: 520px;
+      object-fit: cover;  
+    }
+  }
+
+  .presents-logo {
+    font-size: 74px;
+  }
+  
+  .presents-text {
+    top: 25px;
+    left: 54px;
+  }
+  
+}
+
 @media (max-width: 560px) {
   .video-display-content {
     max-width: 30vw;
     min-width: 300px; // noch mit full hd abgleichen
+  }
+  .img-back {
+    top: 8px;
+    right: 8px;
+    width: 34px;
   }
 }
