--- a/src/app/landingpage/login/password-reset/password-reset.component.html
+++ b/src/app/landingpage/login/password-reset/password-reset.component.html
@@ -1,52 +1,54 @@
 <section>
     <app-header [showImage]="true"></app-header>
        <!-- Formular Container  -->
-       @if (!passwordSent) {
+    @if (!passwordSent) {
 
-    <form class="contentDiv" (ngSubmit)="onSubmit(contactForm)" #contactForm="ngForm">
-        <h1>Reset password</h1>
-        <div class="infoText">
-            <span class="infoTextSpan">Create a new password for your <span class="infoTextBlue">Videoflix</span><br> account.</span>
-        </div>
-
-        <div class="positionInputs">
-            <!----Password------>
-            <div class="passwortImg">
-                <input [type]="passwordFieldType" [(ngModel)]="password" placeholder="Enter a password" name="firstPassword" #firstPassword="ngModel" required class="passwordInput">
-                <img src="../../assets/img/blue_eye.svg" alt="eye image" (click)="togglePasswordVisibility()">
+        <form class="contentDiv" (ngSubmit)="onSubmit(contactForm)" #contactForm="ngForm">
+            <h1>Reset password</h1>
+            <div class="infoText">
+                <span class="infoTextSpan">Create a new password for your <span class="infoTextBlue">Videoflix</span><br> account.</span>
             </div>
-            <!----Confirm Password------>
-            <div class="passwortImg">
-                <input [type]="confirmPasswordFieldType" [(ngModel)]="confirm_password" placeholder="Confirm Password" name="confirmPassword" #confirmPassword="ngModel" required class="passwordInput">
-                <img src="../../assets/img/blue_eye.svg" alt="eye image" (click)="toggleConfirmPasswordVisibility()">
-            </div>
-            @if (!checkConfirmPassword() && confirmPassword.touched) {
-                <div class="invalidFeedback">
-                    @if (confirm_password == ''){
-                        <span><img src="../../../../assets/img/warning.svg" alt="allertImg">Password is required</span>
-                    } @else if(!checkConfirmPassword()) {
-                        <span><img src="../../../../assets/img/warning.svg" alt="allertImg">Password should have at least 5 characters</span>
-                    } 
+        
+            <div class="positionInputs">
+                <!----Password------>
+                <div class="passwortImg">
+                    <input [type]="passwordFieldType" [(ngModel)]="password" placeholder="Enter a password" name="firstPassword" #firstPassword="ngModel" required class="passwordInput">
+                    <img src="../../assets/img/blue_eye.svg" alt="eye image" (click)="togglePasswordVisibility()">
                 </div>
-            }
-            @if (!checkEvenPasswords()&& confirmPassword.touched) {
-                <div class="invalidFeedback">
-                    <span><img src="../../../../assets/img/warning.svg" alt="allertImg">Please check whether the passwords match</span>
+                <!----Confirm Password------>
+                <div class="passwortImg">
+                    <input [type]="confirmPasswordFieldType" [(ngModel)]="confirm_password" placeholder="Confirm Password" name="confirmPassword" #confirmPassword="ngModel" required class="passwordInput">
+                    <img src="../../assets/img/blue_eye.svg" alt="eye image" (click)="toggleConfirmPasswordVisibility()">
                 </div>
-            }
-
-        </div>
-        <button type="submit" class="submitBtn" [ngClass]="{'submitBtn': checkAllInputs(), 'submitBtnDisabled': !checkAllInputs()}" [disabled]="!checkAllInputs()">Reset my password</button>
-    </form>  }
-
-        <!-- Password succes change -->
-        @if (passwordSent) {
-            <div class="successMessage">
-                <h1>Password Reset Successful</h1>
-                <p>Your password has been successfully reset.</p>
-              <button [routerLink]="['/login']" class="loginBtn">Back to Login</button>
+                @if (!checkConfirmPassword() && confirmPassword.touched) {
+                    <div class="invalidFeedback">
+                        @if (confirm_password == ''){
+                            <span><img src="../../../../assets/img/warning.svg" alt="allertImg">Password is required</span>
+                        } @else if(!checkConfirmPassword()) {
+                            <span><img src="../../../../assets/img/warning.svg" alt="allertImg">Password should have at least 5 characters</span>
+                        } 
+                    </div>
+                }
+                @if (!checkEvenPasswords()&& confirmPassword.touched) {
+                    <div class="invalidFeedback">
+                        <span><img src="../../../../assets/img/warning.svg" alt="allertImg">Please check whether the passwords match</span>
+                    </div>
+                }
+            
             </div>
-          }
+            <button type="submit" class="submitBtn" [ngClass]="{'submitBtn': checkAllInputs(), 'submitBtnDisabled': !checkAllInputs()}" [disabled]="!checkAllInputs()">Reset my password</button>
+        </form>  
+    }
+
+    <!-- Password succes change -->
+    @if (passwordSent) {
+        <div class="successMessage">
+            <h1>Password Reset Successful</h1>
+            <p>Your password has been successfully reset.</p>
+          <button [routerLink]="['/login']" class="loginBtn">Back to Login</button>
+        </div>
+    }
+
     <app-footer></app-footer>
 </section>
 
