--- a/src/app/landingpage/login/password-reset/password-reset.component.scss
+++ b/src/app/landingpage/login/password-reset/password-reset.component.scss
@@ -9,6 +9,7 @@ section {
   background-size: cover;
   background-position: center;
 }
+
 .loginBtn {
   color: whitesmoke;
   background-color: $btnColor;
@@ -169,6 +170,53 @@ section {
     color: black;
     font-size: 18px;
     font-weight: 400;
+  }
+}
+
+@media (min-width: $screanWidthQHD) {
+  .contentDiv {
+    min-width: 480px;
+    h1 {
+      font-size: 4.5em;
+    }
+    .positionInputs {
+      .normalInput {
+        font-size: x-large;
+      }
+    }
+  }
+
+  .infoText {
+    span {
+      font-size: 20px;
+    }
+  }
+
+  .invalidFeedback {
+    font-size: larger;
+    img {
+      margin-left: 20px;
+      margin-right: 20px;
+    }
+  }
+
+  .submitBtn {
+    font-size: x-large;
+  }
+
+  .submitBtnDisabled {
+    font-size: x-large;
+  }
+
+  .successMessage {
+    h1 {
+      font-size: 4.5em;
+    }
+    p {
+      font-size: 20px;
+      max-width: 480px;
+      text-align: center;
+    }
   }
 }
 
