--- a/src/app/shared/login/header/header.component.html
+++ b/src/app/shared/login/header/header.component.html
@@ -3,8 +3,10 @@
         <source media="(min-width: 768px)" srcset="../../assets/img/Logo.svg">
         <source media="(max-width: 600px)" srcset="../../assets/img/logo_small.svg">
         <!-- default -->
-        <img src="../../assets/img/Logo.svg" alt="Logo">
+        <img src="../../assets/img/Logo.svg" alt="Logo" [ngClass]="{'logoPosTopLeft': !showImage}">      
     </picture>
-    @if (showImage) {<button [routerLink]="['/login']" class="loginBtn">Log in</button>}
+    @if (showImage) {
+        <button [routerLink]="['/login']" class="loginBtn">Log in</button>
+    }
     
 </div>
