--- a/src/app/landingpage/login/register/register.component.scss
+++ b/src/app/landingpage/login/register/register.component.scss
@@ -145,6 +145,23 @@ section {
   }
 }
 
+@media (min-width: $screanWidthQHD) {
+  .contentDiv {
+    h1 {
+      font-size: 4.5em;
+    }
+  }
+
+  .submitBtn {
+    font-size: x-large;
+  }
+
+  .submitBtnDisabled {
+    font-size: x-large;
+  }
+  
+}
+
 @media (max-width: 630px) {
   .contentDiv {
     padding: 1rem;
