--- a/src/app/landingpage/imprint/imprint/imprint.component.html
+++ b/src/app/landingpage/imprint/imprint/imprint.component.html
@@ -1,8 +1,8 @@
 <section>
     <div class="placholder"></div>
   <div class="container">
-    <div class="homeContainer"> <img class="homeButton" [routerLink]="['/video_site']" src="../../../assets/img/logo_small.svg" alt="logo" class="logo"/>
-        <span [routerLink]="['/video_site']" >Back to VideoFlix</span></div>
+    <div class="homeContainer"> <img class="homeButton" [routerLink]="['/login']" src="../../../assets/img/logo_small.svg" alt="logo" class="logo"/>
+        <span [routerLink]="['/login']" >Back to VideoFlix</span></div>
    
     <div class="header">
       <h1>Imprint</h1>
