--- a/src/app/landingpage/video-site/video-site.component.scss
+++ b/src/app/landingpage/video-site/video-site.component.scss
@@ -213,11 +213,11 @@ section {
     width: 620px;
   
     h1 {
-      font-size: 8rem;
+      font-size: 6rem;
     }
   
     span {
-      font-size: xx-large;
+      font-size: x-large;
     }
   }
 
@@ -228,7 +228,7 @@ section {
     padding-bottom: 16px;
     border: none;
     border-radius: 45px;
-    font-size: xx-large;
+    font-size: x-large;
     img {
       width: 24px;
       height: 24px;
@@ -238,7 +238,7 @@ section {
   .videoDiv {
     .videoDiv2 {
       .videoPosition {
-        font-size: 3em;
+        font-size: 2.4em;
         .video4LoopContainer {
           .arrowLeft {
             button {
